--- a/ProjectTracker/Views/Projects/Details.cshtml
+++ b/ProjectTracker/Views/Projects/Details.cshtml
@@ -50,7 +50,7 @@
             @Html.DisplayNameFor(model => model.Client)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Client.ClientID)
+            @Html.DisplayFor(model => model.Client.ClientName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Tasks)
